# SpeedFlow_CPP

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_speedflow.sh
configs/: config_infer_primary_yolo11.txt  config_nvdsanalytics.txt  pipeline.yml  points_source_target.yml
plugins/: CMakeLists.txt  gstspeedcalc.cpp  homography.cpp  homography.h  plugin_register.cpp  speed_calculator.cpp  speed_calculator.h
proto/: speedflow.proto
scripts/: export_yolo11_static.py
src/: api_server.cpp  config_loader.cpp  config_loader.h  main.cpp  pipeline_builder.cpp  pipeline_builder.h
